# graphify-diff

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/graphify_diff/: __init__.py  __main__.py  cascade.py  cli.py  diff_parser.py  engine.py  graph_patcher.py  recluster.py
tests/: test_graphify_diff.py
