[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphify-diff"
version = "0.1.0"
description = "Incremental graph updates from git diffs — patch a Graphify knowledge graph without re-extracting the entire codebase"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
graphify-diff = "graphify_diff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/graphify_diff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
